# resume-crew

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  cli-default.json  example.json  interview_materials.md  pyproject.toml  requirements.txt  tailored_resume.md
data/: resume.md
resume_writer/: crew.py  interview_materials.md  tailored_resume.md
src/resume_crew/: crew.py  main.py
src/resume_crew/config/: agents.yaml  tasks.yaml
