[tool.poetry]
name = "resume_crew"
version = "0.1.0"
description = "resume-crew using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = {version = "^0.32.2", extras = ["tools"]}

[tool.poetry.scripts]
resume_crew = "resume_crew.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"